# CPDN_control_code

./: .gitignore  CMakeLists.txt  CPDN_control_code.cpp  CPDN_control_code.h  Makefile  README.md  README.utests  cpdn_control.cpp  cpdn_control.h  model_config_file.xml  oifs_43r3_test.cpp  oifs_43r3_test.py  oifs_test_setup.py  openifs.cpp  openifs.h  openifs_wu_submit.py  test_model.cpp  wrf.cpp
.github/workflows/: c-cpp.yml  contoller_ci.yml  controller_ci.yml  run_unit_tests.yml
api/: trickle_handler.cpp  trickle_handler.h
boinc-install/include/boinc/: svn_version.h
boinc-install/lib/: libboinc.la  libboinc_api.la  libboinc_api.so.7.21.0  libboinc_opencl.la  libboinc_opencl.so.7.21.0  libboinc_zip.la  libboinc_zip.so.7.21.0
boinc-install/lib/pkgconfig/: libboinc.pc  libboinc_api.pc  libboinc_opencl.pc  libboinc_zip.pc
cmake/: BoincConfig.cmake  CPDNzipConfig.cmake  GitHelpers.cmake  TargetHelpers.cmake
cpdn/: README.cpdn
lib/: cpdn_linux_cpu_time.cpp  cpdn_linux_cpu_time.h  utils.cpp  utils.h
src/: cpdn_control.cpp  cpdn_control.h  cpdn_main.cpp  openifs.cpp
test/: clean.slot  run.test  setup_test.py
utests/: CMakeLists.txt  README  t_cputime_comparison.cpp  t_read_progress_file.cpp  t_read_rcf_file.cpp  unit_tests.cpp  unit_tests.h
zip/: CMakeLists.txt  README.md  cpdn_zip.cpp  cpdn_zip.h  fix_for_missing_perms.cpp  run.build  test_unzip.cpp  test_zip.cpp
zip/ZipLib/: CMakeLists.txt  ZipFile.cpp
